# djxl-ku-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mgenware/djxlkuapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mgenware/djxlkuapp/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/mgenware/djxlkuapp/: ExampleUnitTest.kt
djxlku/: build.gradle.kts
djxlku/src/androidTest/java/com/mgenware/djxlku/: ExampleInstrumentedTest.kt
djxlku/src/main/cpp/: CMakeLists.txt  djxlku.cpp
djxlku/src/main/cpp/lib_include/libdjxlx/: djxlx.h
djxlku/src/main/java/com/mgenware/djxlku/: DjxlKu.kt
djxlku/src/test/java/com/mgenware/djxlku/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
